atualizações no layout

--- a/pagina de blog.html
+++ b/pagina de blog.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>pagina home</h1>
-    <a href="pagina de vendas.html">ir para a pagina de vendas</a>
-    href="index.html">voltar para a pagina inicial
+    <h1>pagina de blog</h1>
+    <p>vendas =$ 5.000,00</p>
+    <a href="index.html">voltar para a pagina inicial</a>
 </body>
 </html>
